footer overflow responsive fix

--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@
 .footer-link-list {
     list-style: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin: 4rem auto;
+}
+
+@media screen and (min-width: 576px){
+    .footer-link-list{
+        flex-direction: row;
+    }
 }
